package neo.proto;

message RealtimeConfig
{
    optional string fifo_path = 1;
    optional int64 period = 2;
}

message ModelMeta
{
    optional string name = 1;
    optional double alpha = 2;
    optional double beta = 3;
    optional double lambda1 = 4;
    optional double lambda2 = 5;
    optional int64 dump_timestamp = 6;
    optional double sample_rate = 7;
    optional bool use_filter = 8;
    optional int64 filter_capacity = 9;
    optional int32 occurrence_threshold = 10;
    repeated int32 slot_mask = 11;
    optional uint64 model_size = 12;
    repeated int32 sparse_slot = 13 [packed=true];
    optional uint64 sparse_model_size = 14;
    optional RealtimeConfig realtime_config = 15;
    
}

// Configuration that needed when dock PS_CDN model to NEO
message Translater 
{
    // Coefficient times on second-order gradient that produced by PS_CDN.
    //   Since PS_CDN can produce rather exact second-order gradient, 
    //      and FTRL-proximal does not care second-order gradient too much, 
    //      default value 1.0 is good enough under most conditions.
    optional float coefficient_n = 1[default=1.0];
    // Zookeeper that stores ip/port for NEO cluster.
    optional string zk_host = 2;
    optional string zk_path = 3;
    // Whether transfer NEO-format model files to destination hosts.
    optional bool will_transfer = 5[default=true];
    // Transfer produced NEO-format model file to ip:remote_dir/
    optional string neo_model_dir = 6;
}

message ModelFeatures
{
    repeated fixed64 fid = 1 [packed=true];
    repeated float value = 2 [packed=true];
    repeated int64 timestamp = 3 [packed=true];
    repeated float z = 4 [packed=true];
    repeated float n = 5 [packed=true];
    repeated float covariance = 6 [packed=true];
}

message SparseModel
{
    repeated ModelFeatures features = 1;
    repeated ModelFeatures packed_features = 2;
    repeated int64 sparse_id = 3 [packed=true];
    repeated int32 timestamp = 4 [packed=true];
}

